--- a/.github/workflows/git_diff_pr_label.yml
+++ b/.github/workflows/git_diff_pr_label.yml
@@ -2,7 +2,7 @@ name: Label PR Based on Diff
 
 on:
   pull_request:
-    types: [synchronize, opened]
+    types: [opened, synchronize, reopened]
 
 jobs:
   labeler:
