--- a/.github/workflows/git_diff_pr_label.yml
+++ b/.github/workflows/git_diff_pr_label.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Run git diff pr label action
       uses: ./
       with:
-        github-token: ${{ secrets.GH_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
