add npm build script

--- a/.github/workflows/git_diff_pr_label.yml
+++ b/.github/workflows/git_diff_pr_label.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install GitHub CLI
       run: sudo apt-get install -y gh
 
+    - name: Build script
+      run: npm run build
+
     - name: Run git diff pr label action
       uses: ./
       with:
