--- a/.github/workflows/git_diff_pr_label.yml
+++ b/.github/workflows/git_diff_pr_label.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install GitHub CLI
       run: sudo apt-get install -y gh
 
+    - name: Install dependencies
+      run: npm install
+
     - name: Build script
       run: npm run build
 
